Fix: Main slider spacing in production build

--- a/src/styles/2-components/page-home/main-slider/_icons.scss
+++ b/src/styles/2-components/page-home/main-slider/_icons.scss
@@ -37,37 +37,37 @@
         }
       }
     }
-    // 95.96px (icon width) + 10 (added margin) = margin left
+    // 92px (icon width) + 10 (added margin) = margin left
     .one.active ~ hr {
       margin-left: 10px;
     }
 
     .two.active ~ hr {
-      margin-left: 105.96px;
+      margin-left: 102px;
     }
 
     .three.active ~ hr {
-      margin-left: 201.92px;
+      margin-left: 194px;
     }
 
     .four.active ~ hr {
-      margin-left: 297.88px;
+      margin-left: 286px;
     }
 
     .five.active ~ hr {
-      margin-left: 393.84px;
+      margin-left: 378px;
     }
 
     .six.active ~ hr {
-      margin-left: 489.8px;
+      margin-left: 470px;
     }
 
     .seven.active ~ hr {
-      margin-left: 585.76px;
+      margin-left: 562px;
     }
 
     .eight.active ~ hr {
-      margin-left: 681.72px;
+      margin-left: 654px;
     }
     hr {
       height: 0.25rem;
@@ -96,37 +96,37 @@
           margin: 10px;
         }
       }
-      // 98.96px (icon width) + 10 (added margin) = margin left
+      // 95px (icon width) + 10 (added margin) = margin left
       .one.active ~ hr {
         margin-left: 10px;
       }
 
       .two.active ~ hr {
-        margin-left: 108.96px;
+        margin-left: 105px;
       }
 
       .three.active ~ hr {
-        margin-left: 207.92px;
+        margin-left: 200px;
       }
 
       .four.active ~ hr {
-        margin-left: 306.88px;
+        margin-left: 295px;
       }
 
       .five.active ~ hr {
-        margin-left: 405.84px;
+        margin-left: 390px;
       }
 
       .six.active ~ hr {
-        margin-left: 504.8px;
+        margin-left: 485px;
       }
 
       .seven.active ~ hr {
-        margin-left: 603.76px;
+        margin-left: 580px;
       }
 
       .eight.active ~ hr {
-        margin-left: 702.72px;
+        margin-left: 675px;
       }
       // adjust underline width at breakpoint
       hr {
@@ -152,37 +152,37 @@
           margin: 10px;
         }
       }
-      // 133.96px (icon width) + 10 (added margin) = margin left
+      // 130px (icon width) + 10 (added margin) = margin left
       .one.active ~ hr {
         margin-left: 10px;
       }
 
       .two.active ~ hr {
-        margin-left: 143.96px;
+        margin-left: 140px;
       }
 
       .three.active ~ hr {
-        margin-left: 277.92px;
+        margin-left: 270px;
       }
 
       .four.active ~ hr {
-        margin-left: 411.88px;
+        margin-left: 400px;
       }
 
       .five.active ~ hr {
-        margin-left: 545.84px;
+        margin-left: 530px;
       }
 
       .six.active ~ hr {
-        margin-left: 679.8px;
+        margin-left: 660px;
       }
 
       .seven.active ~ hr {
-        margin-left: 813.76px;
+        margin-left: 790px;
       }
 
       .eight.active ~ hr {
-        margin-left: 947.72px;
+        margin-left: 920px;
       }
       // adjust underline width at breakpoint
       hr {
